bookish-memory/overlays/oci/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookish-memory
  namespace: bookish-memory
  labels:
    app: bookish-memory
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: bookish-memory
