bookish-memory/overlays/oci/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-bookish-memory
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames: ["19871506.xyz"]
  rules:
    - backendRefs:
      - name: bookish-memory
        weight: 1
        port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-bookish-memory
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames: ["www.19871506.xyz"]
  rules:
    - backendRefs:
      - name: bookish-memory
        weight: 1
        port: 80
